2017-08-23  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/fpu/libm-test-ulps: Regenerated.

2017-12-30  Aurelien Jarno  <aurelien@aurel32.net>
	    Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22625]
	* elf/dl-load.c (fillin_rpath): Check for empty tokens before dynamic
	string token expansion. Check for NULL pointer or empty string possibly
	returned by expand_dynamic_string_token.
	(decompose_rpath): Check for empty path after dynamic string
	token expansion.

2017-12-18  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22627]
	* elf/dl-load.c (_dl_init_paths): Remove _dl_dst_substitute preparatory
	code and invocation.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22607]
	CVE-2017-1000409
	* elf/dl-load.c (_dl_init_paths): Compute number of components in
	the expanded path string.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22606]
	CVE-2017-1000408
	* elf/dl-load.c (system_dirs): Update comment.
	(nsystem_dirs_len): Use array_length.
	(_dl_init_paths): Use nsystem_dirs_len to compute the array size.

2017-11-02  Florian Weimer  <fweimer@redhat.com>

	Add array_length and array_end macros.
	* include/array_length.h: New file.

2017-12-12  James Clarke <jrtc27@jrtc27.com>

	* sysdeps/unix/sysv/linux/ia64/ipc_priv.h: New file defining
	__IPC_64 to 0 to avoid IPC_64 being set.

2017-11-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #22332]
	* posix/tst-glob-tilde.c (do_noescape): New variable.
	(one_test): Process it.
	(do_test): Set do_noescape.  Add unescaping test case.

2017-10-22  Paul Eggert <eggert@cs.ucla.edu>

	[BZ #22332]
	* posix/glob.c (__glob): Fix buffer overflow during GLOB_TILDE
	unescaping.

2017-10-21  Florian Weimer  <fweimer@redhat.com>

	* posix/Makefile (tests): Add tst-glob-tilde.
	(tests-special): Add tst-glob-tilde-mem.out
	(tst-glob-tilde-ENV): Set MALLOC_TRACE.
	(tst-glob-tilde-mem.out): Add mtrace check.
	* posix/tst-glob-tilde.c: New file.

2017-10-20  Paul Eggert <eggert@cs.ucla.edu>

	[BZ #22320]
	CVE-2017-15670